--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -12,13 +12,11 @@ name: Build OpenWrt
 
 on:
   repository_dispatch:
+    types: [lean, x86_64]
   workflow_dispatch:
-    inputs:
-      ssh:
-        description: 'SSH connection to Actions'
-        required: false
-        default: 'false'
-    watch:
+  schedule:
+    - cron: 0 18 * * *
+  watch:
     types: started
 
 env:
