--- a/.github/workflows/编译最新X86_64.yml
+++ b/.github/workflows/编译最新X86_64.yml
@@ -16,25 +16,13 @@ on:
   watch:
     types: started
 
-env:
-  TZ: Asia/Shanghai
-
 jobs:
-
-  build_openwrt:
-
-    name: Build OpenWrt firmware
-
-    runs-on: ubuntu-latest
-
-    if: github.event.repository.owner.id == github.event.sender.id
+  build:
+    runs-on: ubuntu-18.04
 
     steps:
-
       - name: Checkout
-        uses: actions/checkout@v2
-        with:
-          ref: master
+        uses: actions/checkout@main
 
       - name: Space cleanup
         env:
@@ -47,7 +35,7 @@ jobs:
           sudo -E apt-get -y install build-essential asciidoc binutils bzip2 gawk gettext git libncurses5-dev libz-dev patch python3 unzip zlib1g-dev lib32gcc1 libc6-dev-i386 subversion flex uglifyjs gcc-multilib g++-multilib p7zip p7zip-full msmtp libssl-dev texinfo libglib2.0-dev xmlto qemu-utils upx libelf-dev autoconf automake libtool autopoint device-tree-compiler antlr3 gperf swig
           sudo -E apt-get -y autoremove --purge
           sudo -E apt-get clean
-          sudo timedatectl set-timezone "$TZ"
+          sudo timedatectl set-timezone "Asia/Shanghai"
           df -h
 
       - name: Update feeds
