--- a/.config
+++ b/.config
@@ -361,80 +361,45 @@ CONFIG_PACKAGE_wl12xx-firmware=y
 CONFIG_PACKAGE_wl18xx-firmware=y
 
 # Luci
-CONFIG_PACKAGE_luci-app-adbyby-plus=n
-CONFIG_PACKAGE_luci-app-adguardhome=n
-CONFIG_PACKAGE_luci-app-amule=n
-CONFIG_PACKAGE_luci-app-aria2=n
-CONFIG_PACKAGE_luci-app-baidupcs-web=n
-CONFIG_PACKAGE_luci-app-brook-server=n
-CONFIG_PACKAGE_luci-app-cifs-mount=n
-CONFIG_PACKAGE_luci-app-commands=n
-CONFIG_PACKAGE_luci-app-diskman=n
-CONFIG_PACKAGE_luci-app-diskman_INCLUDE_btrfs_progs=n
-CONFIG_PACKAGE_luci-app-diskman_INCLUDE_lsblk=n
-CONFIG_PACKAGE_luci-app-diskman_INCLUDE_mdadm=n
-CONFIG_PACKAGE_luci-app-diskman_INCLUDE_kmod_md_raid456=n
-CONFIG_PACKAGE_luci-app-diskman_INCLUDE_kmod_md_linear=n
-CONFIG_PACKAGE_luci-app-dnspod=n
-CONFIG_PACKAGE_luci-app-dockerman=n
-CONFIG_PACKAGE_luci-app-familycloud=n
-CONFIG_PACKAGE_luci-app-fileassistant=n
-CONFIG_PACKAGE_luci-app-filebrowser=n
-CONFIG_PACKAGE_luci-app-flowoffload=n
-CONFIG_PACKAGE_luci-app-frpc=n
-CONFIG_PACKAGE_luci-app-frps=n
-CONFIG_PACKAGE_luci-app-gowebdav=n
-CONFIG_PACKAGE_luci-app-guest-wifi=n
-CONFIG_PACKAGE_luci-app-haproxy-tcp=n
-CONFIG_PACKAGE_luci-app-hd-idle=n
-CONFIG_PACKAGE_luci-app-ipsec-vpnd=n
-CONFIG_PACKAGE_luci-app-ipsec-server=n
-CONFIG_PACKAGE_luci-app-jd-dailybonus=n
-CONFIG_PACKAGE_luci-app-kodexplorer=n
-CONFIG_PACKAGE_luci-app-mentohust=n
-CONFIG_PACKAGE_luci-app-minidlna=n
-CONFIG_PACKAGE_luci-app-mjpg-streamer=n
-CONFIG_PACKAGE_luci-app-music-remote-center=n
-CONFIG_PACKAGE_luci-app-mwan3=n
-CONFIG_PACKAGE_luci-app-mwan3helper=n
-CONFIG_PACKAGE_luci-app-n2n_v2=n
-CONFIG_PACKAGE_luci-app-netdata=y
-CONFIG_PACKAGE_luci-app-nfs=n
-CONFIG_PACKAGE_luci-app-nft-qos=n
-CONFIG_PACKAGE_luci-app-nps=n
-CONFIG_PACKAGE_luci-app-onliner=y
-CONFIG_PACKAGE_luci-app-openclash=n
-CONFIG_PACKAGE_luci-app-openvpn-server=n
-CONFIG_PACKAGE_luci-app-passwall=n
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks=n
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Server=n
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR=n
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR_Server=n
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray=n
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray=n
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan_Plus=n
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan_GO=n
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_NaiveProxy=n
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Brook=n
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_kcptun=n
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_haproxy=n
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ChinaDNS_NG=n
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_https_dns_proxy=n
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_dns2socks=n
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_simple-obfs=n
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_v2ray-plugin=n
-CONFIG_PACKAGE_luci-app-pptp-server=n
-CONFIG_PACKAGE_luci-app-ps3netsrv=n
-CONFIG_PACKAGE_luci-app-qbittorrent=n
-CONFIG_PACKAGE_luci-app-rclone=n
+CONFIG_PACKAGE_luci-app-adbyby-plus=y
+CONFIG_PACKAGE_luci-app-vsftpd=n
+CONFIG_PACKAGE_luci-app-xlnetacc=n
+CONFIG_PACKAGE_luci-app-accesscontrol=n
+CONFIG_PACKAGE_luci-app-autoreboot=n
+CONFIG_PACKAGE_luci-app-nlbwmon=n
+CONFIG_PACKAGE_luci-app-v2ray-server=n
+CONFIG_PACKAGE_luci-app-unblockmusic=n
+CONFIG_PACKAGE_autosamba=n
+CONFIG_PACKAGE_luci-app-uugamebooster=n
+CONFIG_PACKAGE_ipv6helper=y
 CONFIG_PACKAGE_luci-app-samba=n
-CONFIG_PACKAGE_luci-app-serverchan=n
-CONFIG_PACKAGE_luci-app-sfe=y
-CONFIG_PACKAGE_luci-app-shairplay=n
-CONFIG_PACKAGE_luci-app-smartdns=n
-CONFIG_PACKAGE_luci-app-socat=n
-CONFIG_PACKAGE_luci-app-softethervpn=n
+CONFIG_PACKAGE_luci-app-automount=n
 CONFIG_PACKAGE_luci-app-sqm=n
+CONFIG_PACKAGE_luci-app-wsdd2=n
+CONFIG_PACKAGE_luci-app-airplay2=n
+CONFIG_PACKAGE_luci-app-music-remote-center=n
+CONFIG_PACKAGE_luci-app-qbittorrent=n
+CONFIG_PACKAGE_luci-app-webadmin=n
+CONFIG_PACKAGE_luci-app-amule=n
+CONFIG_PACKAGE_luci-app-openvpn-server=n
+CONFIG_PACKAGE_luci-app-ipsec-vpnd=n
+CONFIG_PACKAGE_luci-app-softethervpn=n
+CONFIG_PACKAGE_luci-app-ttyd=y
+CONFIG_PACKAGE_luci-app-jd-dailybonus=n
+CONFIG_PACKAGE_luci-app-ddns=n
+CONFIG_PACKAGE_luci-app-filetransfer=n
+CONFIG_PACKAGE_luci-app-sfe=y
+CONFIG_PACKAGE_luci-app-flowoffload=n
+CONFIG_PACKAGE_luci-app-netdata=y
+#CONFIG_PACKAGE_luci-app-passwall=y
+#CONFIG_PACKAGE_luci-app-vssr=y
+CONFIG_PACKAGE_luci-theme-argon=y
+CONFIG_PACKAGE_trojan-plus=n
+CONFIG_PACKAGE_trojan-go=n
+CONFIG_PACKAGE_trojan=n
+CONFIG_PACKAGE_v2ray-plugin=n
+CONFIG_PACKAGE_luci-app-onliner=y
+CONFIG_PACKAGE_luci-app-nlbwmon=y
 CONFIG_PACKAGE_luci-app-ssr-plus=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun=n
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_NaiveProxy=n
@@ -449,36 +414,6 @@ CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Xray=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray=n
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_DNS2SOCKS=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Redsocks2=y
-CONFIG_PACKAGE_luci-app-ssr-mudb-server=n
-CONFIG_PACKAGE_luci-app-syncdial=n
-CONFIG_PACKAGE_luci-app-syncthing=n
-CONFIG_PACKAGE_luci-app-tinyproxy=n
-CONFIG_PACKAGE_luci-app-transmission=n
-CONFIG_PACKAGE_luci-app-trojan-server=n
-CONFIG_PACKAGE_luci-app-ttyd=y
-CONFIG_PACKAGE_luci-app-udpxy=n
-CONFIG_PACKAGE_luci-app-unblockmusic=n
-CONFIG_UnblockNeteaseMusic_Go=n
-CONFIG_UnblockNeteaseMusic_NodeJS=n
-CONFIG_PACKAGE_luci-app-usb-printer=n
-CONFIG_PACKAGE_luci-app-uugamebooster=n
-CONFIG_PACKAGE_luci-app-v2ray-server=n
-CONFIG_PACKAGE_luci-app-vssr=n
-CONFIG_PACKAGE_luci-app-watchcat=n
-CONFIG_PACKAGE_luci-app-webadmin=n
-CONFIG_PACKAGE_luci-app-wifischedule=n
-CONFIG_PACKAGE_luci-app-wireguard=n
-CONFIG_PACKAGE_luci-app-wrtbwmon=n
-CONFIG_PACKAGE_luci-app-xlnetacc=n
-CONFIG_PACKAGE_luci-app-zerotier=y
-CONFIG_PACKAGE_luci-udptools=n
-CONFIG_PACKAGE_luci-proto-minieap=n
-CONFIG_PACKAGE_luci-proto-bonding=n
-CONFIG_PACKAGE_luci-proto-openconnect=n
-CONFIG_PACKAGE_luci-proto-relay=n
-CONFIG_PACKAGE_luci-theme-argon=n
-CONFIG_PACKAGE_luci-app-argon-config=n
-CONFIG_PACKAGE_luci-theme-material=n
 
 CONFIG_LUCI_LANG_ca=y
 CONFIG_LUCI_LANG_cs=y
