--- a/.github/workflows/Build Padavan zerotier 3.yml
+++ b/.github/workflows/Build Padavan zerotier 3.yml
@@ -34,6 +34,7 @@ jobs:
         sudo apt-get -y install unzip libtool-bin curl cmake gperf gawk flex bison nano xxd fakeroot \
         cpio git python-docutils gettext automake autopoint texinfo build-essential help2man \
         pkg-config zlib1g-dev libgmp3-dev libmpc-dev libmpfr-dev libncurses5-dev libltdl-dev wget
+        sudo timedatectl set-timezone "Asia/Shanghai"
     - name: Clone source code
       run: |
         git clone --depth=1 https://github.com/$BUILD_VERSION/rt-n56u.git /opt/rt-n56u
