--- a/.github/workflows/编译最新X86_64.yml
+++ b/.github/workflows/编译最新X86_64.yml
@@ -112,6 +112,20 @@ jobs:
           CONFIG_PACKAGE_v2ray-plugin=n
           CONFIG_PACKAGE_luci-app-onliner=y
           CONFIG_PACKAGE_luci-app-nlbwmon=y
+          CONFIG_PACKAGE_luci-app-ssr-plus=y
+          CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun=n
+          CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_NaiveProxy=n
+          CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks=n
+          CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Server=n
+          CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray_plugin=n
+          CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Socks=n
+          CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Simple_obfs=n
+          CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=n
+          CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan-go=n
+          CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Xray=y
+          CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray=n
+          CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_DNS2SOCKS=y
+          CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Redsocks2=y
           EOF
           
           sed -i 's/^[ \t]*//g' ./.config
