--- a/.config
+++ b/.config
@@ -36,7 +36,9 @@ CONFIG_PACKAGE_luci-app-flowoffload=n
 CONFIG_PACKAGE_luci-app-netdata=y
 #CONFIG_PACKAGE_luci-app-passwall=y
 #CONFIG_PACKAGE_luci-app-vssr=y
+CONFIG_PACKAGE_luci-app-zerotier=y
 CONFIG_PACKAGE_luci-theme-argon=y
+CONFIG_PACKAGE_luci-app-argon-config=y
 CONFIG_PACKAGE_trojan-plus=n
 CONFIG_PACKAGE_trojan-go=n
 CONFIG_PACKAGE_trojan=n
