--- a/.config
+++ b/.config
@@ -5,6 +5,7 @@ CONFIG_TARGET_x86_64_DEVICE_generic=y
 
 # Luci
 CONFIG_PACKAGE_luci=y
+CONFIG_PACKAGE_luci-i18n-base-zh-cn=y
 CONFIG_PACKAGE_luci-app-adbyby-plus=y
 CONFIG_PACKAGE_luci-app-vsftpd=n
 CONFIG_PACKAGE_luci-app-xlnetacc=n
