--- a/.config
+++ b/.config
@@ -54,6 +54,7 @@ CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks=n
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Server=n
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray_plugin=n
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Socks=n
+CONFIG_PACKAGE_shadowsocksr-libev-ssr-local=n
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Simple_obfs=n
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=n
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan-go=n
