--- a/.github/workflows/编译最新X86_64.yml
+++ b/.github/workflows/编译最新X86_64.yml
@@ -151,6 +151,11 @@ jobs:
         if: (!cancelled())
         run: df -hT
 
+      - name: Compress Img Files
+        run: |
+          cd openwrt/bin/targets/x86/64
+          gzip *.img
+
       - name: Upload bin directory
         uses: actions/upload-artifact@main
         if: steps.compile.outputs.status == 'success' && env.UPLOAD_BIN_DIR == 'true'
