--- a/.github/workflows/编译最新n270.yml
+++ b/.github/workflows/编译最新n270.yml
@@ -53,7 +53,12 @@ jobs:
           ./scripts/feeds update -a
           ./scripts/feeds install -a
           sudo sed -i 's/root::0:0:99999:7:::/root:$1$l6Tqa73w$Zoavr1irum3walH.ZOQAo1:18674:0:99999:7:::/g' ./package/base-files/files/etc/shadow
-
+          # 去除 luci-app-socat与socat冲突文件
+          sudo sed -i '/INSTALL_CONF/d' feeds/packages/net/socat/Makefile
+          sudo sed -i '/socat\.init/d' feeds/packages/net/socat/Makefile
+          cd ./package/lean
+          # Add luci-app-socat 
+          sudo svn export https://github.com/Lienol/openwrt-package/trunk/luci-app-socat
 
     - name: Generate configuration file
       run: |
@@ -115,6 +120,8 @@ jobs:
           CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray=n
           CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_DNS2SOCKS=y
           CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Redsocks2=y
+          CONFIG_PACKAGE_socat=y
+          CONFIG_PACKAGE_luci-app-socat=y
           EOF
           
           sed -i 's/^[ \t]*//g' ./.config
