--- a/.github/workflows/编译最新X86_64.yml
+++ b/.github/workflows/编译最新X86_64.yml
@@ -128,6 +128,7 @@ jobs:
           CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_DNS2SOCKS=y
           CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Redsocks2=y
           CONFIG_PACKAGE_socat=y
+          CONFIG_PACKAGE_luci-app-socat=y
           EOF
 
           sed -i 's/^[ \t]*//g' ./.config
