--- a/leanx86.config
+++ b/leanx86.config
@@ -57,3 +57,4 @@ CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray=n
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_DNS2SOCKS=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Redsocks2=y
 CONFIG_PACKAGE_socat=y
+CONFIG_PACKAGE_luci-app-socat=y
