--- a/leanx86.config
+++ b/leanx86.config
@@ -2,6 +2,7 @@
 CONFIG_TARGET_x86=y
 CONFIG_TARGET_x86_64=y
 CONFIG_TARGET_x86_64_DEVICE_generic=y
+CONFIG_TARGET_IMAGES_GZIP=y
 
 # Luci
 CONFIG_PACKAGE_luci-app-adbyby-plus=y
