--- a/.github/workflows/编译最新X86_64.yml
+++ b/.github/workflows/编译最新X86_64.yml
@@ -78,6 +78,7 @@ jobs:
           touch ./.config
           # 常用LuCI插件选择:
           cat >> .config <<EOF
+          CONFIG_TARGET_IMAGES_GZIP=y
           CONFIG_PACKAGE_luci-app-adbyby-plus=y
           CONFIG_PACKAGE_luci-app-vsftpd=n
           CONFIG_PACKAGE_luci-app-xlnetacc=n
