--- a/.github/workflows/编译最新n270.yml
+++ b/.github/workflows/编译最新n270.yml
@@ -154,7 +154,7 @@ jobs:
     - name: Compress Img Files
       run: |
           cd openwrt/bin/targets/*/*
-          gzip *.img
+          #gzip *.img
 
     - name: Upload bin directory
       uses: actions/upload-artifact@main
