--- a/.github/workflows/编译最新X86_64.yml
+++ b/.github/workflows/编译最新X86_64.yml
@@ -62,7 +62,7 @@ jobs:
           cd ./package/lean/
           #git clone https://github.com/jerrykuku/lua-maxminddb
           #git clone https://github.com/jerrykuku/luci-app-vssr
-          #git clone https://github.com/xiaorouji/openwrt-passwall
+          git clone https://github.com/xiaorouji/openwrt-passwall
           #rm -rf luci-theme-argon  
           #git clone -b 18.06 https://github.com/jerrykuku/luci-theme-argon.git
           #git clone --depth=1 https://github.com/jerrykuku/luci-app-argon-config.git
@@ -109,25 +109,12 @@ jobs:
           CONFIG_PACKAGE_luci-app-sfe=n
           CONFIG_PACKAGE_luci-app-flowoffload=y
           CONFIG_PACKAGE_luci-app-netdata=n
-          #CONFIG_PACKAGE_luci-app-passwall=y
+          CONFIG_PACKAGE_luci-app-passwall=y
           #CONFIG_PACKAGE_luci-app-vssr=y
           #CONFIG_PACKAGE_luci-theme-argon=y
           CONFIG_PACKAGE_luci-app-onliner=y
           CONFIG_PACKAGE_luci-app-nlbwmon=y
           CONFIG_PACKAGE_luci-app-ssr-plus=y
-          CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun=n
-          CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_NaiveProxy=n
-          CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks=n
-          CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Server=n
-          CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray_plugin=n
-          CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Socks=n
-          CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Simple_obfs=n
-          CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=n
-          CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan-go=n
-          CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Xray=y
-          CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray=n
-          CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_DNS2SOCKS=y
-          CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Redsocks2=y
           CONFIG_PACKAGE_socat=y
           CONFIG_PACKAGE_luci-app-socat=y
           EOF
