--- a/leanx86.config
+++ b/leanx86.config
@@ -43,5 +43,5 @@ CONFIG_PACKAGE_luci-app-argon-config=n
 CONFIG_PACKAGE_luci-app-onliner=n
 CONFIG_PACKAGE_luci-app-nlbwmon=n
 CONFIG_PACKAGE_luci-app-ssr-plus=y
-CONFIG_PACKAGE_socat=y
-CONFIG_PACKAGE_luci-app-socat=y
+CONFIG_PACKAGE_socat=n
+CONFIG_PACKAGE_luci-app-socat=n
