Update Build Padavan zerotier 5.yml

--- a/.github/workflows/Build Padavan zerotier 5.yml
+++ b/.github/workflows/Build Padavan zerotier 5.yml
@@ -16,7 +16,7 @@ on:
 
 env:                      # 环境变量
   MHZ: 1000               # CPU超频频率 必须为20的倍数。开启超频请修改124行超频选项
-  TNAME: PSG1218           # 配置文件名  https://github.com/hanwckf/rt-n56u/tree/master/trunk/configs/templates
+  TNAME: PSG1218_nano           # 配置文件名  https://github.com/hanwckf/rt-n56u/tree/master/trunk/configs/templates
   BUILD_VERSION: xumng123  # hanwckf 或者 chongshengB
 
 jobs:
