--- a/.github/workflows/Build Padavan zerotier 5.yml
+++ b/.github/workflows/Build Padavan zerotier 5.yml
@@ -32,7 +32,7 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get -y install unzip libtool-bin curl cmake gperf gawk flex bison nano xxd fakeroot \
-        cpio git python-docutils gettext automake autopoint texinfo build-essential help2man \
+        cpio git python3-docutils gettext automake autopoint texinfo build-essential help2man \
         pkg-config zlib1g-dev libgmp3-dev libmpc-dev libmpfr-dev libncurses5-dev libltdl-dev wget
         sudo timedatectl set-timezone "Asia/Shanghai"
     - name: Clone source code
