--- a/.github/workflows/Build K2.yml
+++ b/.github/workflows/Build K2.yml
@@ -66,6 +66,7 @@ jobs:
           CONFIG_TARGET_ramips_mt7620=y
           CONFIG_TARGET_ramips_mt7620_DEVICE_phicomm_psg1218a=y
           CONFIG_PACKAGE_luci-app-adbyby-plus=y
+          CONFIG_IPV6=n
           CONFIG_PACKAGE_luci-app-vsftpd=n
           CONFIG_PACKAGE_luci-app-xlnetacc=n
           CONFIG_PACKAGE_luci-app-accesscontrol=n
