--- a/leanx86.config
+++ b/leanx86.config
@@ -15,6 +15,7 @@ CONFIG_PACKAGE_luci-app-v2ray-server=n
 CONFIG_PACKAGE_luci-app-unblockmusic=n
 CONFIG_PACKAGE_autosamba=n
 CONFIG_PACKAGE_luci-app-uugamebooster=n
+CONFIG_IPV6=n
 CONFIG_PACKAGE_ipv6helper=n
 CONFIG_PACKAGE_luci-app-samba=n
 CONFIG_PACKAGE_luci-app-automount=n
