--- a/leanx86.config
+++ b/leanx86.config
@@ -46,3 +46,5 @@ CONFIG_PACKAGE_luci-app-nlbwmon=n
 CONFIG_PACKAGE_luci-app-ssr-plus=y
 CONFIG_PACKAGE_socat=n
 CONFIG_PACKAGE_luci-app-socat=n
+CONFIG_PACKAGE_odhcpd-ipv6only=n
+CONFIG_PACKAGE_odhcp6c=n
