--- a/.github/workflows/编译最新n270.yml
+++ b/.github/workflows/编译最新n270.yml
@@ -124,6 +124,9 @@ jobs:
           #CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Redsocks2=y
           CONFIG_PACKAGE_socat=y
           CONFIG_PACKAGE_luci-app-socat=y
+          CONFIG_PACKAGE_odhcpd-ipv6only=n
+          CONFIG_PACKAGE_odhcp6c=n
+          CONFIG_PACKAGE_ip6tables=n
           EOF
           
           sed -i 's/^[ \t]*//g' ./.config
