--- a/.github/workflows/编译最新竞斗云.yml
+++ b/.github/workflows/编译最新竞斗云.yml
@@ -46,7 +46,7 @@ jobs:
     - name: Update feeds
       run: |
         cd lede
-        sudo sed -i 's/\#src-git helloworld/\src-git helloworld/g' ./feeds.conf.default
+        sudo sed -i '$asrc-git helloworld https://github.com/fw876/helloworld' ./feeds.conf.default
         sudo sed -i 's/192.168.1.1/192.168.2.1/g' package/base-files/files/bin/config_generate
         ./scripts/feeds clean
         ./scripts/feeds update -a
