--- a/leanx86.config
+++ b/leanx86.config
@@ -51,3 +51,4 @@ CONFIG_PACKAGE_luci-app-socat=n
 CONFIG_PACKAGE_odhcpd-ipv6only=n
 CONFIG_PACKAGE_odhcp6c=n
 CONFIG_PACKAGE_ip6tables=n
+CONFIG_PACKAGE_luci-app-qbittorrent=n
