--- a/.github/workflows/编译最新Redmi AX6.yml
+++ b/.github/workflows/编译最新Redmi AX6.yml
@@ -109,6 +109,7 @@ jobs:
           CONFIG_PACKAGE_odhcpd-ipv6only=n
           CONFIG_PACKAGE_odhcp6c=n
           CONFIG_PACKAGE_ip6tables=n
+          CONFIG_PACKAGE_luci-app-qbittorrent=n
           EOF
 
           sed -i 's/^[ \t]*//g' ./.config
