--- a/.github/workflows/编译最新RM2100.yml
+++ b/.github/workflows/编译最新RM2100.yml
@@ -47,7 +47,7 @@ jobs:
     - name: Update feeds
       run: |
         cd lede
-        sudo sed -i 's/\#src-git helloworld/\src-git helloworld/g' ./feeds.conf.default
+        sudo sed -i '$asrc-git helloworld https://github.com/fw876/helloworld' ./feeds.conf.default
         ./scripts/feeds clean
         ./scripts/feeds update -a
         ./scripts/feeds install -a
