--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -65,7 +65,7 @@ jobs:
           CONFIG_TARGET_ipq807x_generic=y
           CONFIG_TARGET_ipq807x_generic_DEVICE_redmi_ax6=y
           CONFIG_PACKAGE_luci-app-adbyby-plus=y
-          CONFIG_IPV6=y
+          CONFIG_IPV6=n
           CONFIG_PACKAGE_luci-app-vsftpd=n
           CONFIG_PACKAGE_luci-app-xlnetacc=n
           CONFIG_PACKAGE_luci-app-accesscontrol=n
@@ -94,7 +94,7 @@ jobs:
           CONFIG_PACKAGE_luci-app-filetransfer=n
           CONFIG_PACKAGE_luci-app-ssr-plus=y
           CONFIG_PACKAGE_luci-app-turboacc=y
-          CONFIG_PACKAGE_TURBOACC_INCLUDE_SHORTCUT_FE=n
+          CONFIG_PACKAGE_TURBOACC_INCLUDE_SHORTCUT_FE=y
           CONFIG_PACKAGE_TURBOACC_INCLUDE_OFFLOADING=n
           CONFIG_PACKAGE_TURBOACC_INCLUDE_DNSPROXY=y
           CONFIG_PACKAGE_TURBOACC_INCLUDE_BBR_CCA=y
@@ -102,7 +102,7 @@ jobs:
           CONFIG_PACKAGE_odhcpd-ipv6only=n
           CONFIG_PACKAGE_odhcp6c=n
           CONFIG_PACKAGE_ip6tables=n
-          CONFIG_PACKAGE_kmod-qca-nss-ecm=y
+          CONFIG_PACKAGE_kmod-qca-nss-ecm=n
           EOF
 
           sed -i 's/^[ \t]*//g' ./.config
