--- a/.github/workflows/编译最新Redmi AX6.yml
+++ b/.github/workflows/编译最新Redmi AX6.yml
@@ -97,6 +97,7 @@ jobs:
           CONFIG_PACKAGE_TURBOACC_INCLUDE_SHORTCUT_FE=y
           CONFIG_PACKAGE_TURBOACC_INCLUDE_OFFLOADING=n
           CONFIG_PACKAGE_TURBOACC_INCLUDE_DNSPROXY=y
+          CONFIG_PACKAGE_TURBOACC_INCLUDE_DNSFORWARDER=n
           CONFIG_PACKAGE_TURBOACC_INCLUDE_BBR_CCA=y
           CONFIG_PACKAGE_luci-app-zerotier=y
           CONFIG_PACKAGE_odhcpd-ipv6only=n
