--- a/.github/workflows/编译最新Redmi AX6.yml
+++ b/.github/workflows/编译最新Redmi AX6.yml
@@ -103,9 +103,9 @@ jobs:
           CONFIG_PACKAGE_odhcpd-ipv6only=n
           CONFIG_PACKAGE_odhcp6c=n
           CONFIG_PACKAGE_ip6tables=n
-          #CONFIG_PACKAGE_kmod-qca-nss-ecm-premium=y
+          CONFIG_PACKAGE_kmod-qca-nss-ecm-premium=n
           CONFIG_PACKAGE_kmod-qca-nss-dp=y
-          #CONFIG_PACKAGE_kmod-qca-nss-drv=y
+          CONFIG_PACKAGE_kmod-qca-nss-drv=n
           CONFIG_PACKAGE_kmod-qca-ssdk-nohnat=y
           EOF
 
